@@ -232,7 +232,8 @@ int SettingGetName(int index,SettingName name);
 #define cSetting_log_box_selections          133
 #define cSetting_log_conformations           134
 #define cSetting_valence_default             135
-#define cSetting_INIT                        136
+#define cSetting_surface_miserable           136
+#define cSetting_INIT                        137
 
 #endif
 
